# VisualGeometry

./: .gitignore  LICENSE  README.md
GeometriaObliczeniowa/: CMakeLists.txt  CMakeSettings.json  General.cpp  General.h  GeometriaObliczeniowa.vcxproj  GeometriaObliczeniowa.vcxproj.filters  Math.cpp  Math.h  ObjectManager.cpp  ObjectManager.h  RendererManager.cpp  RendererManager.h  VisualCalculator.cpp  VisualCalculator.h  WindowManager.cpp  WindowManager.h  data.txt  main.cpp  punkty.txt  vcpkg.json
